--- a/styles/index.css
+++ b/styles/index.css
@@ -83,6 +83,7 @@ body>div {
 }
 #top>ul:last-child>li>button {
     background: white;
+    cursor: pointer;
 }
 #top>ul:last-child>li>button>img {
     height: 12px;
@@ -243,6 +244,7 @@ body>div {
     width: 100px;
     height: 48px;
     font-size: 16px;
+    cursor: pointer;
 }
 .rectangle-local-heroes>img {
     position: absolute;
@@ -474,6 +476,7 @@ body>div {
     background-color: white;
     font-size: 16px;
     line-height: 16px;
+    cursor: pointer;
 }
 .custom-see-img>img {
     width: 320px;
@@ -571,6 +574,7 @@ body>div {
     border: 3px solid black;
     font-size: 16px;
     line-height: 16px;
+    cursor: pointer;
 }
 
 /* INSTANT-QUOTES */
@@ -650,6 +654,7 @@ body>div {
     line-height: 16px;
     text-transform: uppercase;
     color: #FFFFFF;
+    cursor: pointer;
 }
 /* FOOTER */
 
@@ -699,33 +704,3 @@ body>div {
     /*mix-blend-mode: soft-light;*/
     transform: matrix(-1, 0, 0, 1, 0, 0);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
